--- a/bioSite pages/hobbies.html
+++ b/bioSite pages/hobbies.html
@@ -3,6 +3,23 @@
 
 
     <head> 
+
+
+        <link href="biosite css.css" type="text/css" rel="stylesheet" />
+
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,500&family=Niconne&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
+    
+
+
+
+
+
+
+
+
     
         <title> <b>Zhordera</b> </title> 
         <meta name="description"
@@ -19,10 +36,13 @@
 
     <body>
 
-<h1> <b>Interest</b> </h1>
+
+        <h1> Zhordera </h1>
+
+<h2> <b>Interest</b> </h2>
 
 
-<h2> <b>Popcorn Anyone?</b> </h2>
+<h3> <b>Popcorn Anyone?</b> </h3>
 
 <p> 
     The perfect past time that will take you to whimsically unique realities and action-packed battles all with the click of a remote.
@@ -33,7 +53,7 @@
 </p>
 
 
-<h2> <b>...5, 6, 7, 8! </b> </h2>
+<h3> <b>...5, 6, 7, 8! </b> </h3>
 
 <p>
     Who said exercise had to be boring? 
@@ -43,7 +63,7 @@
 
 </p>
 
-<h2> <b>Where to Next?</b> </h2>
+<h3> <b>Where to Next?</b> </h3>
 
 <p> 
     Just like most hard-working individuals, traveling is one of the most desired activities. 
