--- a/bioSite pages/index.html
+++ b/bioSite pages/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head> 
+
+    <link href="biosite css.css" type="text/css" rel="stylesheet" />
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,500&family=Niconne&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
+
+
+
     
     <title> <b>Zhordera</b> </title> 
     <meta name="description"
@@ -18,41 +28,63 @@
 
 
 
-<body>
 
-<h1> <b> Fulfillments </b> </h1>
 
-<h2> <b> A Life of Giving </b></h2>
+    <h1> Zhordera </h1>
+
+<h2> <b> Fulfillments </b> </h2>
+
+<div class="nursing">
+<h3> <b> A Life of Giving </b></h3>
 
     <p>
-        <img src="images/nurse.jpeg" alt="Zee the Nurse" width="240" height="400" /> For more than twenty-nine years of experience in nursing, Zhordera cannot imagine being in another field. 
+       <img src="images/nurse.jpg" alt="Zee the Nurse" width="250" height="300" hspace="20" style="float:left" /> For more than twenty-nine years of experience in nursing, Zhordera cannot imagine being in another field. 
         Helping others is her life’s work. She takes pride exercising her oath as a nurse. 
         She also takes pride in advocating for those in the military and veterans.
         Her passion for the military is extended through charity. 
         She implores you to find it your heart to donate to organizations that aid our military and veterans.
-    <a> href="https://www.charitynavigator.org/index.cfm?bay=content.view&cpid=531>Donate Today!</a> 
+    <a href="https://www.charitynavigator.org/index.cfm?bay=content.view&cpid=531" > Donate Today! </a> 
 </p>
+</div>
 
 
-<h2> <b> Family is Heart </b> </h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<div class="family">
+<h3> <b> Family is Heart </b> </h3>
 
     <p>
-        Much like her career, family is the constant in Zhordera’s life that keeps her busy and centered.
+        <img src="images/family.jpg" alt="Zee & Family" width="250" height="350" hspace="20" style="float:right" /> Much like her career, family is the constant in Zhordera’s life that keeps her busy and centered.
         She takes joy in her children whose accomplishments are some of her proudest moments. 
         She enjoys being a grandmother to her four lovable grandchildren who keeps her snack stash empty.
         She can count on winding down her hectic days by focusing on those who she holds close to her heart. 
 </p>
+</div>
 
 
-<h2> <b> What's Next? </b> </h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-    <p>
+<div class="whats next"> 
+
+<h3> What's Next? </h3>
+<p>
         After more than two decades working in healthcare and raising three children, 
         Zhordera hopes to buy a new home, and in a few more years, retire from nursing. 
         Having a new home means filling it with more memories with her family.
         As well as having a new space to dance, watch movies, relax, and decorate to her heart's content.   
     </p>
-
+</div>
 
 
 
