--- a/bioSite pages/hobbies.html
+++ b/bioSite pages/hobbies.html
@@ -21,7 +21,7 @@
 
 
     
-        <title> <b>Zhordera</b> </title> 
+        <title> Zhordera </title> 
         <meta name="description"
             content="Hobby page for bioSite"/>
         <meta name="keywords"
@@ -39,7 +39,7 @@
 
         <h1> Zhordera </h1>
 
-<h2> <b>Interest</b> </h2>
+<h2> <b>Interests</b> </h2>
 
 
 <h3> <b>Popcorn Anyone?</b> </h3>
@@ -74,6 +74,16 @@
 </p>
 
 
+
+<div class="navigation"> 
+
+    <img src="images/home.png" alt="heart icon" width="50" height="50" hspace="20" />
+    <img src="images/person.png" alt="person icon" width="50" height="50" hspace="20"/>
+
+
+
+
+</div>
 
 
 
