--- a/bioSite pages/about.html
+++ b/bioSite pages/about.html
@@ -20,7 +20,7 @@
 
 
 
-        <title> <b>Zhordera</b> </title> 
+        <title> Zhordera </title> 
         <meta name="description"
             content="About page for bioSite"/>
         <meta name="keywords"
@@ -58,7 +58,15 @@
 
 
 
+<div class="navigation"> 
 
+    <img src="images/heart.png" alt="heart icon" width="50" height="50" hspace="20" />
+    <img src="images/home.png" alt="person icon" width="50" height="50" hspace="20"/>
+
+
+
+
+</div>
 
 
 
