--- a/bioSite pages/index.html
+++ b/bioSite pages/index.html
@@ -115,7 +115,7 @@
 
 <span class="hovertext" data-hover="Interests">
   
-    <a href="file:///C:/Users/msdan/OneDrive/Pictures/WEB/buwebdev/bioSite/hobbies.html" target="_blank">
+    <a href="file:///C:/Users/msdan/OneDrive/Pictures/WEB/buwebdev/bioSite/bioSite%pages/hobbies.html" target="_blank">
    <img src="images/heart.png" alt="heart icon" width="50" height="50" hspace="20" />
     </a>
 
@@ -125,7 +125,7 @@
 
 <span class="hovertext" data-hover="About">
     
-    <a href="file:///C:/Users/msdan/OneDrive/Pictures/WEB/buwebdev/bioSite/about.html" target="_blank">
+    <a href="file:///C:/Users/msdan/OneDrive/Pictures/WEB/buwebdev/bioSite/bioSite%pages/about.html" target="_blank">
     <img src="images/person.png" alt="person icon" width="50" height="50" hspace="20"/>
     </a>
 
